@startuml
skinparam classAttributeIconSize 0

enum EstadoSolicitud {
  REGISTRADA
  CLASIFICADA
  EN_ATENCION
  ATENDIDA
  CERRADA
}

enum Rol {
  ESTUDIANTE
  RESPONSABLE
  ADMINISTRADOR
}

enum TipoSolicitud {
   REGISTRO_ASIGNATURA,
   HOMOLOGACION,
   CANCELACION,
   CUPO,
   CONSULTA_ACADEMICA
}

enum CanalOrigen {
     CSU,
     CORREO,
     SAC,
     TELEFONICO
}

enum PrioridadSolicitud {
      ALTA,
      MEDIA,
      BAJA
}

class Usuario {
  - id: Long
  - nombre: String
  - correo: String
  - password: String
  - activo: boolean
  - rol: Rol
  --
  + estaActivo(): boolean
  + tieneRol(rol: Rol): boolean
}

class Solicitud {
  - id: Long
  - descripcion: String
  - fechaCreacion: LocalDateTime
  - fechaActualizacion: LocalDateTime
  - estado: EstadoSolicitud
  - prioridad: PrioridadSolicitud
  - justificacionPrioridad: String
  - tipo: TipoSolicitud
  - canalOrigen: CanalOrigen
  - observacionCierre: String
  --
  + clasificar(tipo: TipoSolicitud, prioridad: PrioridadSolicitud, justificacion: String): void
  + asignarResponsable(responsable: Usuario): void
  + marcarEnAtencion(): void
  + marcarAtendida(comentario: String): void
  + cerrar(observacionCierre: String): void
  + puedeTransicionarA(nuevoEstado: EstadoSolicitud): boolean
}

class HistorialSolicitud {
  - id: Long
  - fecha: LocalDateTime
  - accion: String
  - observacion: String
  - estadoAnterior: EstadoSolicitud
  - estadoNuevo: EstadoSolicitud
  --
  + registrarEvento(accion: String, usuario: Usuario): void
}

Solicitud "1" --> "1" Usuario : solicitante
Solicitud "1" --> "0..1" Usuario : responsable
Solicitud "1" *-- "1..*" HistorialSolicitud
HistorialSolicitud "*" --> "1" Usuario : usuarioAccion

@enduml